# GreyRun

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  greyrun.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
greyrun/: __init__.py  __main__.py  backup.py  baseline.py  canary.py  cli.py  config.py  console.py  detector.py  entropy.py  filetypes.py  monitor.py  notecontent.py  notify.py  quarantine.py  responder.py  service.py  signatures.py  simulator.py  utils.py
tests/: test_core.py  test_detectors.py
