[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greyrun"
version = "1.1.1"
description = "GreyRun — behaviour-based ransomware shield (defensive CLI)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ransomware", "security", "defense", "edr", "canary", "honeypot", "entropy"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

# Core runs on the standard library alone. The extras unlock the strongest
# capabilities: efficient OS file-system events and process-level response.
dependencies = []

[project.optional-dependencies]
full = ["psutil>=5.9", "watchdog>=2.1"]

[project.urls]
Homepage = "https://github.com/GreyNOC/GreyRun"
Repository = "https://github.com/GreyNOC/GreyRun"
Issues = "https://github.com/GreyNOC/GreyRun/issues"
Changelog = "https://github.com/GreyNOC/GreyRun/blob/main/CHANGELOG.md"

[project.scripts]
greyrun = "greyrun.cli:main"
gr = "greyrun.cli:main"

[tool.setuptools.packages.find]
include = ["greyrun*"]
exclude = ["tests*"]
